import 'layout_devices.dart';

/// A list of common device specifications sorted by target platform.
abstract class CoolDevices {
  /// All devices.
  static const layout = LayoutDevices();

}